maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: value update is not a member of plm.universe.Direction
    while (!(getDirection() = Direction.NORTH)) {
             ^Escaper:35: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^